data/derived/fa15/progs/unify/prog3762.ml.out
Characters 140-151:
  | Sine sin -> Printf.sprintf ("sin( %s )" sin);
                                ^^^^^^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
